- added some JavaDocs - fixed #2 - fixed #7